src/test/compile-fail/issue-3477.rs
fn main() {
    let _p: char = 100; //~ ERROR mismatched types: expected `char` but found
}